k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vdm
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "2m"
    nginx.ingress.kubernetes.io/add-headers: vdm/ingress-response-headers
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "vigiedumensonge.gocorp.fr"
      secretName: ingress-tls
  rules:
    - host: "vigiedumensonge.gocorp.fr"
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
